# ScoutInputSystem

./: CMakeLists.txt  README.md
Include/Scout/: IInputSystem.h
Include/Scout/SdlInput/: Keyboard.h  Mouse.h  TypedefAndEnum.h  Window.h
Src/: IInputSystem.cpp
Src/SdlInput/: Keyboard.cpp  Mouse.cpp  Window.cpp
